--- a/bootstrap/css/convert.css
+++ b/bootstrap/css/convert.css
@@ -205,3 +205,23 @@ a {
 .about {
 	padding: 80px 0;
 }
+
+/*Services - CSS Style*/
+.services {
+	background-image: linear-gradient(to right, #6372ff, #5ca9fb);
+	color: #ffffff;
+	padding: 80px 0;
+	text-align: center;
+}
+.services p {
+	font-size: 18px;
+}
+.services h3 {
+	font-size: 20px;
+	margin: 20px 0 10px 0;
+}
+.services [class*="col"] p {
+	color: #ffffff;
+	font-size: 14px;
+	padding: 0 15px;
+}
