--- a/bootstrap/css/convert.css
+++ b/bootstrap/css/convert.css
@@ -88,6 +88,10 @@ a {
 	background-image: none;
 	background-color: rgba(255, 255, 255, 0.25);
 }
+.lead {
+	color: #777;
+	font-size: 18px;
+}
 
 /* Circle Icon - CSS Style */
 .icon {
@@ -213,8 +217,8 @@ a {
 	padding: 80px 0;
 	text-align: center;
 }
-.services p {
-	font-size: 18px;
+.services .lead {
+	color: #ffffff;
 }
 .services h3 {
 	font-size: 20px;
@@ -224,4 +228,58 @@ a {
 	color: #ffffff;
 	font-size: 14px;
 	padding: 0 15px;
+}
+
+/*Gallery - CSS Style*/
+.gallery {
+	padding: 90px 0;
+	text-align: center;
+}
+.gallery .lead {
+	color: #777;
+	font-size: 18px;
+	margin-bottom: 80px;
+}
+.gallery [class*="col"] {
+	padding: 0;
+}
+.gallery .thumbnail {
+	border: 0;
+	border-radius: 0;
+	box-shadow: 0 0 0 1px #ffffff;
+	color: #ffffff;
+	height: 260px;
+	margin-bottom: 0;
+	padding: 0;
+	overflow: hidden;
+	position: relative;
+}
+.gallery .thumbnail img {
+	max-width: 100%;
+}
+.gallery .thumbnail a {
+	display: block;
+	text-align: center;
+}
+.gallery .thumbnail .overlay {
+	background-image: linear-gradient(to right, rgba(99, 114, 255, 0.8), rgba(92, 169, 251, 0.8));
+	height: 260px;
+	padding: 25px;
+	position: absolute;
+	bottom: -500px;
+	left: 0;
+	right: 0;
+	z-index: 100;
+}
+.gallery .thumbnail:hover .overlay {
+	top: 0;
+	bottom: 0;
+}
+.gallery .overlay p {
+	color: #ffffff;
+	font-family: 'Raleway', sans-serif;
+	font-size: 18px;
+	font-weight: 600;
+	margin-top: 90px;
+	text-transform: uppercase;
 }
