--- a/bootstrap/css/convert.css
+++ b/bootstrap/css/convert.css
@@ -283,3 +283,41 @@ a {
 	margin-top: 90px;
 	text-transform: uppercase;
 }
+
+/*Testimonial - CSS Style*/
+.testimonials {
+	background: #f6f6f6;
+	padding: 80px 0;
+}
+.testimonials .separator {
+	margin-bottom: 80px;
+}
+.media {
+	margin-bottom: 35px;
+	padding-left: 80px;
+	padding-right: 20px;
+	position: relative;
+	text-align: left;
+}
+.media .dp {
+	border-radius: 50%;
+	height: 64px;
+	overflow: hidden;
+	position: absolute;
+	left: 0;
+	top: 15px;
+	width: 64px;
+}
+.media .dp img {
+	max-width: 100%;
+}
+.media p {
+	color: #777777;
+	font-style: italic;
+	line-height: 20px;
+	margin: 10px 0;
+}
+.media span {
+	color: #666;
+	font-weight: 600;
+}
