--- a/bootstrap/css/convert.css
+++ b/bootstrap/css/convert.css
@@ -321,3 +321,30 @@ a {
 	color: #666;
 	font-weight: 600;
 }
+
+/*Team - CSS Style*/
+.team {
+	padding: 80px 0;
+	text-align: center;
+}
+.team .lead {
+	margin-bottom: 80px;
+}
+.team-member .dp {
+	height: 240px;
+	margin: 0 auto 15px;
+	overflow: hidden;
+	width: 240px;
+}
+.team-member .dp img {
+	max-width: 100%;
+}
+.team-member h4 {
+	font-size: 18px;
+	font-weight: 600;
+	margin: 5px 0;
+}
+.team-member span {
+	color: #888888;
+	display: block;
+}
