--- a/bootstrap/css/convert.css
+++ b/bootstrap/css/convert.css
@@ -472,3 +472,14 @@ a {
 	left: 0;
 	top: 5px;
 }
+
+/*Footer - CSS Style*/
+.footer {
+	background: #f6f6f6;
+	padding: 30px 0;
+}
+.copyright {
+	color: #888888;
+	line-height: 30px;
+	text-align: center;
+}
