--- a/bootstrap/css/convert.css
+++ b/bootstrap/css/convert.css
@@ -46,6 +46,9 @@ a {
 	color: #5ca7fb;
 	text-decoration: none;
 }
+img {
+	max-width: 100%;
+}
 
 /* Advance Heading - CSS Style */
 .advance-heading {
@@ -392,6 +395,9 @@ a {
 	color: #cbe5fe;
 	font-size: 16px;
 }
+.contact textarea {
+	height: 105px;
+}
 .contact .btn-outline {
 	margin-top: 30px;
 }
@@ -482,4 +488,132 @@ a {
 	color: #888888;
 	line-height: 30px;
 	text-align: center;
+}
+
+@media (max-width: 1024px) {
+	/*Jumbotron - CSS Style*/
+	.jumbotron {
+		/*height: 500px;*/  /* it can be also*/
+		height: auto;
+		padding: 50px 0;
+	}
+	.jumbotron:before {
+		background: rgba(0, 0, 0, 0.25);
+	}
+	.jumbotron .text-block {
+		max-width: 700px;
+		padding: 30px 0;
+	}
+	.jumbotron .text-block h1 {
+		font-size: 52px;
+		margin: 15px 0;
+	}
+	.jumbotron .text-block p {
+		font-size: 18px;
+		line-height: 28px;
+		margin: 0 0 30px 0;
+	}
+
+	/*All Section - Common CSS Style*/
+	.features,
+	.about,
+	.services,
+	.gallery,
+	.testimonials,
+	.team,
+	.contact {
+		padding: 50px 0;
+	}
+
+	/*Gallery - CSS Style*/
+	.gallery .lead {
+		margin-bottom: 50px;
+	}
+
+	/*Team - CSS Style*/
+	.team-member .dp {
+		height: auto;
+		width: auto;	
+	}
+
+	/*Contact - CSS Style*/
+	.contact .seprator {
+		margin: 35px 0;
+	}
+	.contact .widget .title {
+		border-bottom: 1px solid;
+		font-size: 24px;
+		font-weight: 600;
+		line-height: 34px;
+		padding-bottom: 5px;
+	}
+	.contact .social-media {
+		margin-top: 60px;
+	}
+}
+
+@media (max-width: 767px) {
+
+	.advance-heading {
+		font-size: 24px;
+		line-height: 34px;
+	}
+
+	/*Jumbotron - CSS Style*/
+	.jumbotron .text-block {
+		padding: 20px 15px;
+	}
+	.jumbotron .text-block h1 {
+		font-size: 32px;
+	}
+	.jumbotron .text-block p {
+		font-size: 16px;
+	}
+
+	/*All Section - Common CSS Style*/
+	.features,
+	.about,
+	.services,
+	.gallery,
+	.testimonials,
+	.team,
+	.contact {
+		padding: 30px 0;
+	}
+	
+	/*Gallery - CSS Style*/
+	.gallery [class*="col"] {
+		padding: 0 15px;
+	}
+	.gallery .thumbnail {
+		margin: 15px 0;
+	}
+
+	/*Testimonials - CSS Style*/
+	.testimonials .media {
+		padding-left: 20px;
+		text-align: center;
+	}
+	.media .dp {
+		margin: 0 auto;
+		top: 0;
+		position: relative;
+	}
+
+	/*Team - CSS Style*/
+	.team .team-member {
+		margin: 15px 0;
+	}
+
+	/*Social Media - CSS Style*/
+	.social-media li {
+		margin: 10px;
+	}
+
+	/*Contact - CSS Style*/
+	.contact .seprator,
+	.contact .social-media {
+		margin-left: -15px;
+		margin-right: -15px;
+	}
 }
